Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/self_initializer/T8024809/SelfInitializerInLambdaTesta.out
SelfInitializerInLambdaTesta.java:10:48: compiler.err.illegal.self.ref
SelfInitializerInLambdaTesta.java:15:28: compiler.err.illegal.self.ref
SelfInitializerInLambdaTesta.java:21:32: compiler.err.illegal.self.ref
SelfInitializerInLambdaTesta.java:26:28: compiler.err.illegal.self.ref
SelfInitializerInLambdaTesta.java:34:32: compiler.err.illegal.self.ref
SelfInitializerInLambdaTesta.java:39:32: compiler.err.illegal.self.ref
6 errors
